# coordinate

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  amc-test-prd-2.md  amc-test-prd.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: squad.rb
docs/: autopilot-tmux-launcher-review.md  cli-command-patterns-run5.md  provider-adapters-inventory-run3.md  provider-adapters-inventory-run4.md  provider-adapters-inventory.md
docs/superpowers/plans/: 2026-03-21-input-validation-fixes-plan.md  2026-03-21-mcp-workflow.md  2026-03-21-squad-v2-cli-redesign.md  2026-03-22-poll-receive-plan.md  2026-03-22-session-token-plan.md
docs/superpowers/specs/: 2026-03-21-input-validation-fixes-design.md  (+2 more)
site/: index.html
src/: autopilot.rs  init.rs  lib.rs  main.rs  roles.rs  session.rs  store.rs  tasks.rs  teams.rs
src/roles/: inspector.md  manager.md  worker.md
templates/: launcher.yaml.example  rlmf-api-dashboard-integration.md  rlmf-chain-indexer-attestation.md  rlmf-dataset-builder.md  rlmf-lora-qlora-runner.md  rlmf-vllm-qwen-judge.md  run-task.md.example
tests/: autopilot_config_test.rs  autopilot_prd_ingestion_test.rs  autopilot_release_block_test.rs  autopilot_role_prompt_test.rs  autopilot_routing_reliability_test.rs  autopilot_task_graph_test.rs  autopilot_team_test.rs  autopilot_terminal_session_test.rs  autopilot_test_run_tracking_test.rs  cli_test.rs  docs_test.rs  e2e_test.rs  init_test.rs  rlmf_task_templates_test.rs  roles_test.rs  session_test.rs  store_test.rs  task_test.rs  teams_test.rs  workflow_test.rs
(+1 files in other folders)
