[package]
name = "squad"
version = "0.7.6"
edition = "2021"
license = "MIT"
description = "Multi-AI-agent terminal collaboration via simple CLI commands"
repository = "https://github.com/fractalsociety/coordinate"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
